D3 not rendering correctly anymore - go to static image for now

--- a/notes/day2-notes.Rmd
+++ b/notes/day2-notes.Rmd
@@ -6,12 +6,9 @@ output:
     theme: readable
     toc: yes
     toc_float: yes
-    includes:
-      in_header: "extras/header.html"
   github_document:
     toc: yes
     toc_depth: 3
-date: "March 29, 2017"
 ---
 
 ```{r setup, include = FALSE}
@@ -496,65 +493,7 @@ ggplot(diamonds, aes(cut, carat)) +
 
 ### Pie chart
 
-<style>
-
-.arc text {
-  font: 10px sans-serif;
-  text-anchor: middle;
-}
-
-.arc path {
-  stroke: #fff;
-}
-
-</style>
-<svg width="960" height="500"></svg>
-<script>
-
-var svg = d3.select("svg"),
-    width = +svg.attr("width"),
-    height = +svg.attr("height"),
-    radius = Math.min(width, height) / 2,
-    g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
-
-var color = d3.scaleOrdinal(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
-
-var pie = d3.pie()
-    .sort(null)
-    .value(function(d) { return d.population; });
-
-var path = d3.arc()
-    .outerRadius(radius - 10)
-    .innerRadius(0);
-
-var label = d3.arc()
-    .outerRadius(radius - 40)
-    .innerRadius(radius - 40);
-
-d3.csv("data/pie.csv", function(d) {
-  d.population = +d.population;
-  return d;
-}, function(error, data) {
-  if (error) throw error;
-
-  var arc = g.selectAll(".arc")
-    .data(pie(data))
-    .enter().append("g")
-      .attr("class", "arc");
-
-  arc.append("path")
-      .attr("d", path)
-      .attr("fill", function(d) { return color(d.data.age); });
-
-  arc.append("text")
-      .attr("transform", function(d) { return "translate(" + label.centroid(d) + ")"; })
-      .attr("dy", "0.35em")
-      .text(function(d) { return d.data.age; });
-});
-
-</script>
-
-Source: [Pie Chart](https://bl.ocks.org/mbostock/3887235)
+![Source: [Pie Chart](https://bl.ocks.org/mbostock/3887235)](images/pie_chart.png)
 
 ### Donut chart
 
