--- a/notes/day3-notes.Rmd
+++ b/notes/day3-notes.Rmd
@@ -31,7 +31,7 @@ theme_set(theme_minimal())
 * Identify examples of untruth in visualizations
 * Critique visualizations using these definitions
 
-# What makes a good visualization
+# What makes a great visualization
 
 ## Truthful
 
@@ -138,71 +138,71 @@ But as Cairo points out, truth is not absolute: it is a continuum, a spectrum. W
 
 # Visualizations to critique
 
-## Presidential popularity
-
-> [Trump popularity](https://projects.fivethirtyeight.com/trump-approval-ratings/)
-
 * What is the story?
 * Is it truthful?
 * Is it functional?
 * Is it beautiful?
 * Is it insightful?
 * Is it enlightening?
+
+## Presidential popularity
+
+> [Trump popularity](https://projects.fivethirtyeight.com/trump-approval-ratings/)
+
+* Updated calculation of presidential approval rating
+* Adjusts polls for quality, recency, sample size, and partisan lean (+1 truthful)
+* Accounts for uncertainty
+* Lists all the data
+* Some interactivity to compare measures, but mostly static
+* Static stories for spontaneous discovery - comparisons to other modern presidents
+* Net approval vs. approve/disapprove - better to project just the difference?
 
 ## Climate change
 
 > [Earth Temperature Timeline](https://xkcd.com/1732/)
 
-* What is the story?
-* Is it truthful?
-* Is it functional?
-* Is it beautiful?
-* Is it insightful?
-* Is it enlightening?
+* Tells the story of climate change - mainly to show that global warming is occurring now
+* Somewhat comical influence - duh
+* Uncompressed y-axis - not normally great but for this storytelling probably nice
+* Includes discussion of uncertainty/limits of data (16000 BCE)
+* Hockey stick inverted
+* Important story to tell
 
 ## Gun violence
 
 > [Gun Deaths in America](https://fivethirtyeight.com/features/gun-deaths/)
 
-* What is the story?
-* Is it truthful?
-* Is it functional?
-* Is it beautiful?
-* Is it insightful?
-* Is it enlightening?
+* Impact of gun violence in America
+* Focuses exclusively internally - no comparisons to other countries (e.g. abnormality of gun violence in most other first-world countries)
+* Interactive element to tell the story, but not really explorative (except at the end)
+* Relatively simple graph type to communicate the information
 
 ## Citation counts in science
 
 > [The Paper Mountain](http://www.nature.com/news/the-top-100-papers-1.16224)
 
-* What is the story?
-* Is it truthful?
-* Is it functional?
-* Is it beautiful?
-* Is it insightful?
-* Is it enlightening?
+* More chart junk, but still an important story - but what is it?
+    * Modal number of citations is 0
+    * A very few papers produce the vast majority of citations
+* A few different graphs combined here
+* Not very explorative - more explanation
+* Do the geographic comparisons help or hinder interpretation?
+
 
 ## Attitudes towards same-sex marriage
 
 > [Marriage](https://xkcd.com/1431/)
 
-* What is the story?
-* Is it truthful?
-* Is it functional?
-* Is it beautiful?
-* Is it insightful?
-* Is it enlightening?
+* Attempts to relate approval over time of interracial marriage to same-sex marriage - but is this a fair comparison?
+* Graph makes one think so quite clearly, but could it be misleading?
+* Oversimplification of the story
+    * Subgroup comparisons - what segments of the population drive these attitudinal changes?
+    * Are/should these types of marriages be equivalent? Is it the fair comparison?
 
 ## Making cookies
 
 > [Cookie ingredient variants](http://flowingdata.com/2014/12/24/cookie-ingredient-variants/)
 
-* What is the story?
-* Is it truthful?
-* Is it functional?
-* Is it beautiful?
-* Is it insightful?
-* Is it enlightening?
 
 
 # Session Info {.toc-ignore}
