--- a/submissions/mcclellan_julian/a1/a1_viscrit_ggplot.Rmd
+++ b/submissions/mcclellan_julian/a1/a1_viscrit_ggplot.Rmd
@@ -142,13 +142,114 @@ biden_df <- read_csv("../data/biden.csv") %>%
     party = 2 * dem + rep,
     party = ifelse(party == 2, "dem", 
                    ifelse(party == 1, "rep", "ind")),
-    age_quant = cut(age, quantile(age), include.lowest = TRUE),
+    age_quant = cut(age, quantile(age, seq(0, 1, .5)), include.lowest = TRUE,
+                    labels = c("Age 18-47", "Age 48-93")),
     educ_quant = cut(educ, quantile(educ, seq(0, 1, .5)), include.lowest = TRUE,
-                     labels = c('0 to 13 years of education', '14 to 17+ years of education')))
+                     labels = c("0-13 Years of Education", "14-17+ Years of Education")))
+
+biden_df$educ_quant <- factor(biden_df$educ_quant, levels = rev(levels(biden_df$educ_quant)))
 
 biden_df %>%
   ggplot(aes(female, biden, fill = party)) +
-    geom_violin() +
+    geom_violin(alpha = .55, draw_quantiles = c(.5), scale = "count", adjust = .8) +
     facet_grid(educ_quant ~ age_quant) +
-    labs()
+    scale_x_discrete(labels = c("Male", "Female")) +
+    scale_fill_manual(values = c("blue", "grey", "red"),
+                      labels = c("Democrat", "Independent", "Republican")) + 
+    labs(title = "Biden Warmth Score by Gender and Poltical Party",
+         subtitle = "With medians indicated across combinations of bipartite splits on age and years of education\nDensity area is scaled to number of respondents",
+         fill = "Party Affiliation",
+         x = "Gender",
+         y = "Biden Warmth Score")
 ```
+
+## Design
+
+The file `biden.csv` contains 6 variables concerning political party affiliation, 
+gender, age, years of education, and of course, attitude towards Joe Biden. Any
+story contained in the data pertains to:
+
+  * Who are the distinct groups of people in the data?
+  * How many people are in these groups?
+  * How do these groups of people feel toward Joe Biden?
+  
+### Distinct groups of comparison
+The ideal starting point for grouping is the categorical variables, as individual 
+respondents can fall into the finite number of combinations of these variables.
+
+Intuitively speaking, `biden.csv` contains two categorical variables: gender,
+and party affiliation, but mechanically, they are coded across three separate
+binary variables: `female`, `dem`, and `rep`. With the latter two binary
+variables I construct a single variable `party` that took either `"dem"`, 
+`"rep"`, or `"ind"` as values.
+
+The visualization sacrifices the ability to make "pure" comparisons across the values
+of a single categorical variable with all of the data split on it. Instead opting for the
+ability to compare across the 6 unique combinations of gender and party 
+affiliation. The visualization indicates the 3 party affiliations with colors.
+Any reader with some level of familiariaty with American politics will find them quite familiar.
+These 3 differently colored shapes of comparison are grouped horizontally, 
+once for males, and again (to the right) for females.
+
+However `biden.csv` still has `age` and `educ`, the age of the respondendent and 
+their years of education. While only containing discrete values, both have 
+enough unique values that they are effectively continuous. However, they must not
+monopolize the x and y dimensions. The x dimension already serves to help distinguish 
+gender, and given the effectively continuous nature of `biden`, one of our variables
+of comparison, it would be prudent for it to utilize the x or y axis as well. Thus, I transform
+`age` and `educ` into two partitions split on their respective means in the overall
+data. There are four different facets in 2x2 fashion, with the left (right)
+facets corresponding to age ranges below (above) the mean, and the bottom (top)
+facets corresponding to years of education below (above) the mean.
+
+### The variables of comparison
+As stated previously, the story of the data concerns how different groups feel
+towards Joe Biden, and how many respondents comprise these different groups. The
+shape used to communicate these two variables of comparison is a violin plot, with
+the area of the violin plot scaled to the number of respondents it accounts for.
+
+Utilizing a violin plot allows us to provide a smooth distribution of `biden` scores for comparison.
+A look at the actual data shows us that a lot of these values are multiples of
+ten and/or 5. (Most people do not have discerning 0-100 ratings of their feelings
+towards Joe Biden.) Sure, the violin plot has smoothing parameters that can be 
+tuned, and in the same vein, smoothing is not the "purest" representation of the raw data, 
+but smoothed distributions are more aesthetically pleasing shapes to compare, and
+I have chosen a smoothing window that I believe makes the best tradeoff between
+apperance and faithful representation.
+
+The violin plots are oriented vertically, with the y-axis of each facet corresponding
+only to the `biden` variable. Thus, within each of the 4 combinations of old/young
+and less/more education, one can make a side-by-side comparison of `biden` distributions
+between parties within that gender and between that gender. 
+
+The age facets can also be easily compared, as their violin plots line up horizontally.
+The median of each violin plot is marked in black and accentuated for easy viewing
+by a lowered alpha value on party affiliation colors. The medians provide an expedited
+means of comparison horizontally, but also faciliate comparisons across
+different education facets. By leaving in the tick lines for `biden`, differing
+education facets can still be compared by using the ticks as a reference, though
+the comparing vertically is arguably more involved than horizontally. Of course,
+the faceting could have limited to a 1x4 shape, but such a form would take away 
+the intuitive tie this visualization has between each facet dimensions and the
+`age` and `educ` variables. Indeed, there's hardly any intuition across 2 faceted
+variables with only one dimension of faceting.
+
+### Making comparisons
+I previously asserted that the ability to make "pure" comparisons was sacrificed,
+and while this is true, that ability is not *completely* erradicated. Attempting
+to compare the different party affiliations for the whole dataset is possible, 
+but the design of the visualization forces the viewer to utilize the interaction 
+between party affiliation across gender, age,  and education first. One might be 
+able to conclude that there are fewer Republicans than any other party affiliation, 
+and that all Republicans give Biden a lower median score. But this would require confirming that
+fact by generalizing comparisons between the 8 red violin plots against 16 other violin plots in the 
+visualization, this is certainly much more difficult than if one wanted  to 
+compare Biden scores among Republican females ages 18-47 (just look at two plots).
+
+Thus, the visualization's design encourages more specific comparisons of `biden` score and number
+of respondents between specific groups. Indeed, every variable included within
+`biden.csv` is explicitly represented in the visualization, though some depth of information
+has been compromised to include the variables in the first place. There is also
+specific group size, which is not explicitly coded, but its inclusion helps give 
+convey to the viewer that this survey does not represent groups, or even values
+of all the categorical variables, equally.
